[gd_scene load_steps=2 format=3 uid="uid://4frpbjvqq3ti"]

[ext_resource type="Script" path="res://scenes/house/portal.gd" id="1_xpy2f"]

[node name="Portal" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_xpy2f")

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[node name="Node" type="Node" parent="."]

[node name="TeleportsTo" type="Marker2D" parent="Node"]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
